--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,11 +1,15 @@
 .header{
-    width: 100%;
+    width: 100%; 
     height: 70%;
     line-height: 70px;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1111111;
+}
+.header_shrink{
+background: #343444;
+box-shadow: 3px 3px 6px -3px #e250e5;
 }
 .navigation{
     display: flex;
